BB-6003: FrontStore > Catalog > It appears horizontal scrolling in grid - fixed horizontal scroll on gallery view catalog

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
@@ -29,11 +29,6 @@
 
       font-size: 0;
 
-      @media (min-width: 992px) {
-        margin-left: -15px;
-        margin-right: -15px;
-      }
-
       @media (max-width: $screen-md) {
         margin-top: 20px;
       }
@@ -753,9 +748,10 @@
     display: inline-block;
     vertical-align: top;
 
-    width: 20%;
+    width: calc(20% - 16px);
 
-    padding: 0 $product-item-gallery-view-offset-x $product-item-gallery-view-offset-bottom;
+    margin-right: 20px;
+    padding: 0 0 $product-item-gallery-view-offset-bottom;
 
     font-size: $base-font-size;
 
@@ -764,41 +760,40 @@
       z-index: 1;
     }
 
-    @media (min-width: 843px) and (max-width: $screen-md) {
-      width: 25%;
-
-      &:nth-child(4n+1) {
-        padding-left: 0;
+    @media (min-width: 992px) {
+      &:nth-child(5n+5) {
+        margin: 0;
       }
+    }
+
+    @media (min-width: 843px) and (max-width: $screen-md) {
+      width: calc(25% - 15px);
+      margin-right: 20px;
 
       &:nth-child(4n+4) {
-        padding-right: 0;
+        margin: 0;
       }
     }
 
     @media (min-width: 560px) and (max-width: 842px) {
-      width: 33.3333%;
-
-      &:nth-child(3n+1) {
-        padding-left: 0;
-      }
+      width: calc(33.3333% - 16px);
+      margin-right: 24px;
 
       &:nth-child(3n+3) {
-        padding-right: 0;
+        margin: 0;
       }
     }
 
     @media (max-width: 559px) {
-      width: 50%;
+      width: calc(50% - 5px);
 
       &:nth-child(2n+1) {
-        padding-left: 0;
-        padding-right: 5px;
+        margin-right: 5px;
       }
 
       &:nth-child(2n+2) {
-        padding-right: 0;
-        padding-left: 5px;
+        margin-right: 0;
+        margin-left: 5px;
       }
     }
   }
